--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Emilie Van de walle</title>
-
 <style>
+  /* Reset en basis */
   * {
     margin: 0;
     padding: 0;
@@ -14,17 +14,18 @@
 
   html, body {
     height: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
     transition: background-color 0.5s ease, color 0.5s ease;
+    overflow: hidden;
   }
 
   body {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-between; /* header bovenaan, footer onderaan */
     align-items: center;
     text-align: center;
-    padding: 100px 20px;
+    padding: 100px 20px; /* grotere padding boven/onder */
     opacity: 0;
   }
 
@@ -39,22 +40,22 @@
     transition: opacity 1s ease, transform 1s ease;
   }
 
-  body.loaded header,
-  body.loaded footer {
+  body.loaded header, body.loaded footer {
     opacity: 1;
     transform: translateY(0);
   }
 
   header {
-    font-family: serif;
     font-size: 1.2rem;
+    font-family: 'Didot', serif; /* Didot voor een elegant serif-lettertype */
+    color: inherit;
   }
 
   main {
-    flex: 1;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    flex: 1;
   }
 
   h1 {
@@ -72,45 +73,59 @@
   footer a {
     color: inherit;
     text-decoration: none;
+    font-size: 1rem;
+  }
+
+  footer a:hover {
+    text-decoration: underline;
+  }
+
+  /* Responsive */
+  @media (max-width: 768px) {
+    h1 { font-size: 2rem; }
+    header, footer a { font-size: 0.9rem; }
   }
 </style>
 </head>
-
 <body>
 
 <header>architecte</header>
-
 <main>
   <h1>Emilie Van de walle</h1>
 </main>
-
-<footer>
-  <a href="mailto:emilie@evdw.net">emilie@evdw.net</a>
-</footer>
+<footer><a href="mailto:emilie@evdw.net">emilie@evdw.net</a></footer>
 
 <script>
+  // Kleurencombinaties (Le Corbusier + extra zwart/wit)
   const colors = [
-    { bg: '#E6D3B1', text: '#2B2B2B' },
-    { bg: '#428f70', text: '#F5F4EF' },
-    { bg: '#9FB3C1', text: '#1F1F1F' },
-    { bg: '#ac443a', text: '#FAF7F2' },
-    { bg: '#2F3E4E', text: '#EDEAE3' },
-    { bg: '#000000', text: '#FFFFFF' }
+    {bg: '#E6D3B1', text: '#2B2B2B'},
+    {bg: '#428f70', text: '#F5F4EF'},
+    {bg: '#9FB3C1', text: '#1F1F1F'},
+    {bg: '#ac443a', text: '#FAF7F2'},
+    {bg: '#2F3E4E', text: '#EDEAE3'},
+    {bg: '#000000', text: '#FFFFFF'}
   ];
 
+  // Functie om een willekeurige kleurcombinatie te kiezen
   function setRandomColor() {
-    const c = colors[Math.floor(Math.random() * colors.length)];
-    document.body.style.backgroundColor = c.bg;
-    document.body.style.color = c.text;
+    const randomIndex = Math.floor(Math.random() * colors.length);
+    const selected = colors[randomIndex];
+    document.body.style.backgroundColor = selected.bg;
+    document.body.style.color = selected.text;
   }
 
+  // Kies bij eerste load
   setRandomColor();
 
+  // Trigger animaties na load
   window.addEventListener('load', () => {
     document.body.classList.add('loaded');
   });
 
-  document.body.addEventListener('click', setRandomColor);
+  // Verander kleur bij enkelklik
+  document.body.addEventListener('click', () => {
+    setRandomColor();
+  });
 </script>
 
 </body>
