Change font family from Didot to Instrument Serif

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   header {
     font-size: 1.2rem;
-    font-family: 'Didot', serif; /* Didot voor een elegant serif-lettertype */
+    font-family: 'Instrument Serif', serif;
     color: inherit;
   }
 
