Adjust padding and add new color option
Increased top and bottom padding in the main style and added a new color combination option.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     justify-content: space-between; /* header bovenaan, footer onderaan */
     align-items: center;
     text-align: center;
-    padding: 100px 20px; /* grotere padding boven/onder */
+    padding: 140px 20px; /* grotere padding boven/onder */
     opacity: 0;
   }
 
@@ -103,7 +103,8 @@
     {bg: '#9FB3C1', text: '#1F1F1F'},
     {bg: '#ac443a', text: '#FAF7F2'},
     {bg: '#2F3E4E', text: '#EDEAE3'},
-    {bg: '#000000', text: '#FFFFFF'}
+    {bg: '#000000', text: '#FFFFFF'},
+    {bg: '#FFFFFF', text: '#000000'}
   ];
 
   // Functie om een willekeurige kleurcombinatie te kiezen
